feat: add logout buttons to main and game activities

--- a/Final/app/src/main/AndroidManifest.xml
+++ b/Final/app/src/main/AndroidManifest.xml
@@ -8,10 +8,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Homework56">
+        android:theme="@style/Theme.FinalTask">
 
-        <activity android:name=".GameActivity"/>
-        <activity android:name=".MainActivity" />
         <activity android:name=".SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,8 +17,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".MainActivity" />
         <activity android:name=".LoginActivity" />
         <activity android:name=".ToDoActivity" />
+        <activity android:name=".GameActivity"/>
 
         <meta-data
             android:name="preloaded_fonts"
