--- a/Final/app/src/main/AndroidManifest.xml
+++ b/Final/app/src/main/AndroidManifest.xml
@@ -19,8 +19,8 @@
         </activity>
         <activity android:name=".MainActivity" />
         <activity android:name=".LoginActivity" />
-        <activity android:name=".ToDoActivity" />
-        <activity android:name=".GameActivity"/>
+        <activity android:name=".ToDo.ToDoActivity" />
+        <activity android:name=".Game.GameActivity"/>
 
         <meta-data
             android:name="preloaded_fonts"
